Improvments to the log GUI
- Menu to plot common graphs (still need to be extended to allow to
  plot encoder/command velocity and joint error)
- Menu to select the robot being plotted
- Nicer display for joint data (joints names based on the RobotModule
  rather than index)

--- a/utils/mc_log_gui/mc_log_main_ui.ui
+++ b/utils/mc_log_gui/mc_log_main_ui.ui
@@ -59,7 +59,13 @@
     <addaction name="actionLoad"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuCommonPlots">
+    <property name="title">
+     <string>Common plots</string>
+    </property>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuCommonPlots"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionLoad">
