--- a/utils/mc_log_gui/mc_log_tab_ui.ui
+++ b/utils/mc_log_gui/mc_log_tab_ui.ui
@@ -24,6 +24,9 @@
        <property name="selectionMode">
         <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectItems</enum>
+       </property>
        <property name="columnCount">
         <number>2</number>
        </property>
