--- a/utils/mc_log_gui/mc_log_tab_ui.ui
+++ b/utils/mc_log_gui/mc_log_tab_ui.ui
@@ -13,65 +13,68 @@
   <property name="windowTitle">
    <string>MCLogTab</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="1">
-      <widget class="PlotCanvasWithToolbar" name="canvas" native="true"/>
-     </item>
-     <item row="0" column="0">
-      <widget class="QTreeWidget" name="y1Selector">
-       <property name="selectionMode">
-        <enum>QAbstractItemView::ExtendedSelection</enum>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <widget class="QTreeWidget" name="y1Selector">
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectItems</enum>
+      </property>
+      <property name="columnCount">
+       <number>2</number>
+      </property>
+      <attribute name="headerVisible">
+       <bool>true</bool>
+      </attribute>
+      <column>
+       <property name="text">
+        <string notr="true">1</string>
        </property>
-       <property name="selectionBehavior">
-        <enum>QAbstractItemView::SelectItems</enum>
+      </column>
+      <column>
+       <property name="text">
+        <string notr="true">2</string>
        </property>
-       <property name="columnCount">
-        <number>2</number>
+      </column>
+     </widget>
+     <widget class="QWidget" name="">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="PlotCanvasWithToolbar" name="canvas" native="true"/>
+       </item>
+       <item>
+        <widget class="QComboBox" name="xSelector"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QTreeWidget" name="y2Selector">
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+      <property name="columnCount">
+       <number>2</number>
+      </property>
+      <attribute name="headerVisible">
+       <bool>true</bool>
+      </attribute>
+      <column>
+       <property name="text">
+        <string notr="true">1</string>
        </property>
-       <attribute name="headerVisible">
-        <bool>true</bool>
-       </attribute>
-       <column>
-        <property name="text">
-         <string notr="true">1</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string notr="true">2</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QTreeWidget" name="y2Selector">
-       <property name="selectionMode">
-        <enum>QAbstractItemView::ExtendedSelection</enum>
+      </column>
+      <column>
+       <property name="text">
+        <string notr="true">2</string>
        </property>
-       <property name="columnCount">
-        <number>2</number>
-       </property>
-       <attribute name="headerVisible">
-        <bool>true</bool>
-       </attribute>
-       <column>
-        <property name="text">
-         <string notr="true">1</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string notr="true">2</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QComboBox" name="xSelector"/>
-     </item>
-    </layout>
+      </column>
+     </widget>
+    </widget>
    </item>
   </layout>
  </widget>
