Start working on some improvments for the log GUI
- Switch from matplotlib to pyqtgraph

One main concern is performance, the other is future possible
functionalities for the GUI that pyqtgraph opens up.

For the users, the big changes that it introduces is in the graph
interface/behaviour

- Removed the diff checkboxes and replaced it with a contextual menu
  that allows to plot "special" graphs for a given entity

- Build a deeper tree for the data presentation, this allows to group
  similar data together

For example, previously, if one had the following entry:
- hrp4_admittance_target(_x|_y|_z)
- hrp4_admittance_pos(_x|_y|_z)
- hrp4_admittance_force(_x|_y|_z)

Then three groups were created:
- hrp4_admittance_target
  - x
  - y
  - z
- hrp4_admittance_pos
  - x
  - y
  - z
- hrp4_admittance_force
  - x
  - y
  - z

Now, he would get:
- hrp4_admittance
  - target
    - x
    - y
    - z
  - pos
    - x
    - y
    - z
  - force
    - x
    - y
    - z

- The interface automatically delete temporary files it created in the
  process of converting binary logs to the flat representation

ToDo:
- support more special graphs than diff (e.g. Quaternion -> RPY)

--- a/utils/mc_log_gui/mc_log_tab_ui.ui
+++ b/utils/mc_log_gui/mc_log_tab_ui.ui
@@ -15,66 +15,61 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QSplitter" name="splitter">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <widget class="QTreeWidget" name="y1Selector">
-      <property name="selectionMode">
-       <enum>QAbstractItemView::ExtendedSelection</enum>
-      </property>
-      <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectItems</enum>
-      </property>
-      <property name="columnCount">
-       <number>2</number>
-      </property>
-      <attribute name="headerVisible">
-       <bool>true</bool>
-      </attribute>
-      <column>
-       <property name="text">
-        <string notr="true">1</string>
+    <layout class="QVBoxLayout" name="y1SelectorLayout">
+     <item>
+      <widget class="QTreeWidget" name="y1Selector">
+       <property name="selectionMode">
+        <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
-      </column>
-      <column>
-       <property name="text">
-        <string notr="true">2</string>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectItems</enum>
        </property>
-      </column>
-     </widget>
-     <widget class="QWidget" name="">
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="PlotCanvasWithToolbar" name="canvas" native="true"/>
-       </item>
-       <item>
-        <widget class="QComboBox" name="xSelector"/>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QTreeWidget" name="y2Selector">
-      <property name="selectionMode">
-       <enum>QAbstractItemView::ExtendedSelection</enum>
-      </property>
-      <property name="columnCount">
-       <number>2</number>
-      </property>
-      <attribute name="headerVisible">
-       <bool>true</bool>
-      </attribute>
-      <column>
-       <property name="text">
-        <string notr="true">1</string>
+       <property name="columnCount">
+        <number>1</number>
        </property>
-      </column>
-      <column>
-       <property name="text">
-        <string notr="true">2</string>
+       <attribute name="headerVisible">
+        <bool>true</bool>
+       </attribute>
+       <column>
+        <property name="text">
+         <string notr="true">1</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="PlotCanvasWithToolbar" name="canvas" native="true"/>
+     </item>
+     <item>
+      <widget class="QComboBox" name="xSelector"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QVBoxLayout" name="y2SelectorLayout">
+     <item>
+      <widget class="QTreeWidget" name="y2Selector">
+       <property name="selectionMode">
+        <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
-      </column>
-     </widget>
-    </widget>
+       <property name="columnCount">
+        <number>1</number>
+       </property>
+       <attribute name="headerVisible">
+        <bool>true</bool>
+       </attribute>
+       <column>
+        <property name="text">
+         <string notr="true">1</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
