[log GUI] Allow to lock the Y axes scale

--- a/utils/mc_log_gui/mc_log_tab_ui.ui
+++ b/utils/mc_log_gui/mc_log_tab_ui.ui
@@ -45,7 +45,18 @@
       <widget class="PlotCanvasWithToolbar" name="canvas" native="true"/>
      </item>
      <item>
-      <widget class="QComboBox" name="xSelector"/>
+      <layout class="QHBoxLayout" name="selectorLayout">
+       <item>
+        <widget class="QComboBox" name="xSelector">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
