[utils] Install mc_log_ui.py and plot_logs.py
Installed as mc_log_ui and mc_plot_logs resp.

--- a/utils/mc_log_gui/mc_log_ui/ui/mc_log_main_ui.ui
+++ b/utils/mc_log_gui/mc_log_ui/ui/mc_log_main_ui.ui
@@ -89,13 +89,13 @@
   <customwidget>
    <class>MCLogTab</class>
    <extends>QWidget</extends>
-   <header>mc_log_tab</header>
+   <header>mc_log_ui/mc_log_tab</header>
    <container>1</container>
   </customwidget>
   <customwidget>
    <class>MCLogTabWidget</class>
    <extends>QTabWidget</extends>
-   <header>mc_log_tab_widget</header>
+   <header>mc_log_ui/mc_log_tab_widget</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
