--- a/doc/css/mc_rtc.css
+++ b/doc/css/mc_rtc.css
@@ -32,3 +32,38 @@ body
 {
   font-weight: bold;
 }
+
+.list-group.list-group-root {
+    padding: 0;
+    overflow: hidden;
+}
+
+.list-group.list-group-root .list-group {
+    margin-bottom: 0;
+}
+
+.list-group.list-group-root .list-group-item {
+    border-radius: 0;
+    border-width: 1px 0 0 0;
+}
+
+.list-group.list-group-root > .list-group-item:first-child {
+    border-top-width: 0;
+}
+
+.list-group.list-group-root > .collapse > .list-group > .list-group-item {
+    padding-left: 30px;
+}
+
+.list-group.list-group-root > .collapsing > .list-group > .list-group-item {
+    padding-left: 30px;
+}
+
+.list-group.list-group-root > .collapse.show > .list-group > .list-group-item {
+    padding-left: 30px;
+}
+
+.list-group-item .octicon {
+    margin-right: 5px;
+}
+
