[doc] Make the website navbar sticky [skip ci]

--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
+    <header class="navbar navbar-expand-lg navbar-light bg-light sticky-top" role="navigation">
       <a class="navbar-brand" href="index.html"><img src="/assets/logo.png" alt="logo" width="30" height="30"/> mc_rtc</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
