--- a/doc/_layouts/json.html
+++ b/doc/_layouts/json.html
@@ -6,14 +6,17 @@ layout: default
   <div class="offset-1 col-3">
     <div class="list-group list-group-root well">
     {% for cat in page.menu %}
-    <a href="#{{ cat[0] }}-objects" class="list-group-item {% if page.category != cat[0] %}collapsed{% endif %}" data-toggle="collapse" role="button">
-      <svg class="octicon octicon-chevron-right octicon octicon-chevron-right" viewBox="0 0 8 16" version="1.1" width="8" height="16" aria-hidden="true" style="{% if page.category == cat[0] %}display:none{% endif %}"><path fill-rule="evenodd" d="M7.5 8l-5 5L1 11.5 4.75 8 1 4.5 2.5 3l5 5z"></path></svg><svg class="octicon octicon-chevron-down octicon octicon-chevron-down" viewBox="0 0 10 16" version="1.1" width="10" height="16" aria-hidden="true" style="{% if page.category != cat[0] %}display:none{% endif %}"><path fill-rule="evenodd" d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6l-5 5z"></path></svg>{{ cat[0] }} objects
+    <a href="#{{ cat[0] }}-objects" class="list-group-item collapsed" data-toggle="collapse" role="button">
+      <svg class="octicon octicon-chevron-right octicon octicon-chevron-right" viewBox="0 0 8 16" version="1.1" width="8" height="16" aria-hidden="true" style=""><path fill-rule="evenodd" d="M7.5 8l-5 5L1 11.5 4.75 8 1 4.5 2.5 3l5 5z"></path></svg><svg class="octicon octicon-chevron-down octicon octicon-chevron-down" viewBox="0 0 10 16" version="1.1" width="10" height="16" aria-hidden="true" style="display:none"><path fill-rule="evenodd" d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6l-5 5z"></path></svg>{{ cat[0] }} objects
     </a>
-    <div class="collapse{% if page.category == cat[0] %} show{% endif %}" id="{{ cat[0] }}-objects">
-      <div class="list-group" id="">
+    <div class="collapse" id="{{ cat[0] }}-objects">
+      <div class="list-group">
         {% assign sorted_objects = cat[1] | sort %}
         {% for obj in sorted_objects %}
-          <a href="{{site.baseurl}}/schemas/{{ cat[0] }}/{{ obj[0] }}.html" class="list-group-item{% if obj[1].active %} active{% endif %}">{{ obj[1].display }}</a>
+          {% assign category = cat[0] %}
+          {% assign name = obj[0] %}
+          {% capture id %}collapse{{page.all_schemas[category][name].schema.title | replace: "::", "_"}}{% endcapture %}
+          <a href="#{{id}}" class="list-group-item" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="{{id}}" onclick="$('.collapseSchema').collapse('hide')">{{obj[1].display}}</a>
         {% endfor %}
       </div>
     </div>
@@ -21,19 +24,13 @@ layout: default
     </div>
   </div>
   <div class="col-6">
-    {% include json_schema.html schema=page.schema id=page.schema.title %}
-    {% if page.schema %}
-      <div class="card">
-        <div class="card-header">
-          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Example</button>
-        </div>
-        <div id="collapseExample" class="collapse">
-          <div class="card-body">
-            {% include show_sources.html sources=page.example_sources copy=true id="example" %}
-          </div>
-        </div>
-      </div>
-    {% endif %}
+    {% for cat in page.all_schemas %}
+      {% for name in cat[1] %}
+        {% assign schema = name[1].schema %}
+        {% assign example = name[1].example %}
+        {% include json_schema_with_examples.html schema=schema example_sources=example %}
+      {% endfor %}
+    {% endfor %}
   </div>
 </div>
 
