--- a/doc/_layouts/json.html
+++ b/doc/_layouts/json.html
@@ -6,29 +6,34 @@ layout: default
   <div class="offset-1 col-3">
     <div class="list-group list-group-root well">
     {% for cat in page.menu %}
-    <a href="#{{ cat[0] }}-objects" class="list-group-item collapsed" data-toggle="collapse" role="button">
-      <svg class="octicon octicon-chevron-right octicon octicon-chevron-right" viewBox="0 0 8 16" version="1.1" width="8" height="16" aria-hidden="true" style=""><path fill-rule="evenodd" d="M7.5 8l-5 5L1 11.5 4.75 8 1 4.5 2.5 3l5 5z"></path></svg><svg class="octicon octicon-chevron-down octicon octicon-chevron-down" viewBox="0 0 10 16" version="1.1" width="10" height="16" aria-hidden="true" style="display:none"><path fill-rule="evenodd" d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6l-5 5z"></path></svg>{{ cat[0] }} objects
-    </a>
-    <div class="collapse" id="{{ cat[0] }}-objects">
-      <div class="list-group">
-        {% assign sorted_objects = cat[1] | sort %}
-        {% for obj in sorted_objects %}
-          {% assign category = cat[0] %}
-          {% assign name = obj[0] %}
-          {% capture id %}collapse{{page.all_schemas[category][name].schema.title | replace: "::", "_"}}{% endcapture %}
-          <a href="#{{id}}" class="list-group-item" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="{{id}}" onclick="$('.collapseSchema').collapse('hide')">{{obj[1].display}}</a>
-        {% endfor %}
+      {% assign category = cat[0] %}
+      <a id="{{category}}_link" href="#{{ cat[0] }}-objects" class="list-group-item list-group-item-category collapsed" data-toggle="collapse" role="button">
+        <span class="chevron-right">{% octicon chevron-right %}</span>
+        <span class="chevron-down" style="display:none;">{% octicon chevron-down %}</span>
+        {{ cat[0] }} objects
+      </a>
+      <div class="collapse" id="{{ cat[0] }}-objects">
+        <div class="list-group">
+          {% assign sorted_objects = cat[1] | sort %}
+          {% for obj in sorted_objects %}
+            {% assign name = obj[0] %}
+            {% capture id %}collapse_{{category}}_{{name}}{% endcapture %}
+            <a id="{{category}}_{{name}}_link" href="#{{id}}" class="list-group-item list-group-item-schema" data-toggle="collapse" role="button" aria-expanded="false" data-permalink="{{cat[0]}}/{{obj[0]}}" aria-controls="{{id}}">{{obj[1].display}}</a>
+          {% endfor %}
+        </div>
       </div>
-    </div>
     {% endfor %}
     </div>
   </div>
   <div class="col-6">
     {% for cat in page.all_schemas %}
-      {% for name in cat[1] %}
-        {% assign schema = name[1].schema %}
-        {% assign example = name[1].example %}
-        {% include json_schema_with_examples.html schema=schema example_sources=example %}
+      {% for obj in cat[1] %}
+        {% assign schema = obj[1].schema %}
+        {% assign example = obj[1].example %}
+        {% assign category = cat[0] %}
+        {% assign name = obj[0] %}
+        {% capture id %}{{category}}_{{name}}{% endcapture %}
+        {% include json_schema_with_examples.html schema=schema example_sources=example id=id %}
       {% endfor %}
     {% endfor %}
   </div>
@@ -37,10 +42,32 @@ layout: default
 <script type="text/javascript">
 $(document).ready(function()
 {
-  $('.list-group-item').on('click', function() {
+  $('.collapseSchema').collapse('hide');
+
+  var param=window.location.hash.substring(1);
+  if(param.length)
+  {
+    var category = param.split('/')[0];
+    var name = param.split('/')[1];
+    $('#collapse_' + category + '_' + name).collapse('show');
+    $('.chevron-down', $('#' + category + '_link')).toggle();
+    $('.chevron-right', $('#' + category + '_link')).toggle();
+    $('#' + category + '_' + name + '_link').toggleClass('active', true);
+    $('#' + category + '-objects').collapse();
+  }
+
+  $('.list-group-item-category').on('click', function() {
             var $this = $(this);
-            $('.octicon-chevron-down', this).toggle();
-            $('.octicon-chevron-right', this).toggle();
+            $('.chevron-down', this).toggle();
+            $('.chevron-right', this).toggle();
+  });
+
+  $('.list-group-item-schema').on('click', function() {
+            var $this = $(this);
+            $('.collapseSchema').collapse('hide');
+            $('.list-group-item-schema').toggleClass('active', false);
+            $this.toggleClass('active', true);
+            window.location.hash = $this.data("permalink");
   });
 
   new ClipboardJS('.copy-button');
