--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -34,7 +34,7 @@
 
   <body>
     <header class="navbar navbar-expand-lg navbar-light bg-light sticky-top" role="navigation">
-      <a class="navbar-brand" href="index.html"><img src="{{site.baseurl}}/assets/logo.png" alt="logo" width="30" height="30"/> mc_rtc</a>
+      <a class="navbar-brand" href="{{site.baseurl}}/index.html"><img src="{{site.baseurl}}/assets/logo.png" alt="logo" width="30" height="30"/> mc_rtc</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
