[doc] Add first tutorials
Ports/modernized versions of the wiki tutorials in C++ and Python

--- a/doc/css/mc_rtc.css
+++ b/doc/css/mc_rtc.css
@@ -197,3 +197,13 @@ body
 {
   margin-top: 10px;
 }
+
+.highlight-inline figure
+{
+  display: inline !important;
+}
+
+.highlight-inline pre
+{
+  display: inline !important;
+}
