--- a/doc/_layouts/tutorials.html
+++ b/doc/_layouts/tutorials.html
@@ -94,7 +94,7 @@
 
     <div class="container-fluid">
       <div class="row">
-      <div class="col-3">
+      <div class="col">
         <ul>
           {% for cat in site.data.tutorials %}
           <li>{{cat.title}}</li>
