--- a/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
+++ b/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
@@ -56,6 +56,7 @@ $ mc_rtc_new_controller my_first_controller MyFirstController
 {% highlight bash %}
 $ mkdir -p build
 $ cd build
+# This build type provides good performance with debuggable code
 $ cmake ../ -DCMAKE_BUILD_TYPE=RelWithDebInfo
 $ make
 $ sudo make install
