--- a/doc/_layouts/json.html
+++ b/doc/_layouts/json.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="row">
-  <div class="offset-1 col-3">
+  <div class="col offset-md-1 col-md-3">
     <div class="list-group list-group-root well">
     {% for cat in page.menu %}
       {% assign category = cat[0] %}
@@ -25,7 +25,7 @@ layout: default
     {% endfor %}
     </div>
   </div>
-  <div class="col-6">
+  <div class="col">
     {% for cat in page.all_schemas %}
       {% for obj in cat[1] %}
         {% assign schema = obj[1].schema %}
@@ -37,6 +37,7 @@ layout: default
       {% endfor %}
     {% endfor %}
   </div>
+  <div class="col-md-1 col-0"></div>
 </div>
 
 <script type="text/javascript">
