[YAML][doc] Update filename for mc_rtc_new_controller example

--- a/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
+++ b/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
@@ -33,7 +33,7 @@ $ mc_rtc_new_controller my_first_controller MyFirstController
   <dt class="col-3">CMakeLists.txt</dt>
   <dd class="col-9">A minimal CMake file to build your controller</dd>
 
-  <dt class="col-3">etc/MyFirstController.conf</dt>
+  <dt class="col-3">etc/MyFirstController.yaml</dt>
   <dd class="col-9">Your contorller configuration file see this <a href="{{site.baseurl}}/tutorials/usage/mc_rtc_configuration.html">tutorial</a> for more details</dd>
 
   <dt class="col-3">src/CMakeLists.txt</dt>
