[YAML][doc] Update doc with YAML entries

--- a/doc/_includes/mc_rtc_configuration_row.html
+++ b/doc/_includes/mc_rtc_configuration_row.html
@@ -1,5 +1,5 @@
 <tr>
   <th scope="row">{{include.entry}}</th>
   <td>{{include.desc}}</td>
-  <td>{% highlight json %}{{include.example}}{% endhighlight %}</td>
+  <td>{% highlight yaml %}{{include.example}}{% endhighlight %}</td>
 </tr>
