[doc] Change reference to gite.lirmm.fr where appropriate

--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -70,7 +70,7 @@
           {% endif %}
           {% endfor %}
         </div>
-        <a href="https://gite.lirmm.fr/multi-contact/mc_rtc" target="blank_"><img src="{{site.baseurl}}/assets/gitlab-logo.svg" alt="GitLab logo" width="25" height="25" /></a>
+        <a href="https://github.com/jrl-umi3218/mc_rtc" target="blank_">{% octicon mark-github height:25 width:25 %}</a>
       </div>
     </header>
 
