[doc] Display default for complex references

--- a/doc/_includes/json_schema_item.html
+++ b/doc/_includes/json_schema_item.html
@@ -13,6 +13,9 @@
   {% endfor %}
 {% elsif include.data contains "REF" %}
   <a class="btn btn-outline-primary btn-sm" role="button" data-toggle="collapse" data-target="#collapse{{include.id}}" aria-expanded="false" aria-controls="collapse{{include.id}}">{{include.data.title}}</a>
+  {% if include.data contains "default" %}
+    &nbsp;<small><span class="text-secondary">default</span></small>&nbsp;<span class="text-{{type}}">{{include.data.default}}</span>
+  {% endif %}
   {% capture INCLUDE_AFTER %}
   <tr class="collapse" id="collapse{{include.id}}">
     <td colspan="3">
