--- a/doc/_includes/json_schema_item.html
+++ b/doc/_includes/json_schema_item.html
@@ -46,7 +46,12 @@
     {% endif %}
     {% include json_schema_array.html minItems=minItems maxItems=include.data.maxItems items=include.data.items id=include.id %}
   {% elsif type == "object" %}
-    <a class="btn btn-outline-primary btn-sm" role="button" data-toggle="collapse" data-target="#collapse{{include.id}}" aria-expanded="false" aria-controls="collapse{{include.id}}">object</a>
+    {% if include.data.title %}
+      {% capture TITLE %}{{ include.data.title }}{% endcapture %}
+    {% else %}
+      {% capture TITLE %}object{% endcapture %}
+    {% endif %}
+    <a class="btn btn-outline-primary btn-sm" role="button" data-toggle="collapse" data-target="#collapse{{include.id}}" aria-expanded="false" aria-controls="collapse{{include.id}}">{{TITLE}}</a>
     {% capture INCLUDE_AFTER %}
     <tr class="collapse" id="collapse{{include.id}}">
       <td colspan="3">
