[doc] Support liquid tags in the JSON schemas
- Use liquefy plugin to render liquid tags from the generated schemas
content

Usage:
```
{{ variable_with_liquid_tags | liquefy }}
```

In the JSON schemas use:
- {{site.baseurl}} for the link prefix
- {% doxygen YourClass %} for doxygen entries

--- a/doc/_includes/json_schema.html
+++ b/doc/_includes/json_schema.html
@@ -3,7 +3,7 @@
   <div class="card-header">
     <h6 class="text-primary font-weight-bold">{{ include.schema.title | default: "object" }}</h6>
     <div class="float-right">
-      <small class="text-muted text-right">{{ include.schema.description }}</small>
+      <small class="text-muted text-right">{{include.schema.description | liquefy}}</small>
     </div>
   </div>
   <div class="card-body">
