[aliases] Generate env robot for objects

--- a/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
+++ b/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
@@ -34,7 +34,7 @@ $ mc_rtc_new_controller my_first_controller MyFirstController
   <dd class="col-9">A minimal CMake file to build your controller</dd>
 
   <dt class="col-3">etc/MyFirstController.yaml</dt>
-  <dd class="col-9">Your contorller configuration file see this <a href="{{site.baseurl}}/tutorials/usage/mc_rtc_configuration.html">tutorial</a> for more details</dd>
+  <dd class="col-9">Your controller configuration file see this <a href="{{site.baseurl}}/tutorials/usage/mc_rtc_configuration.html">tutorial</a> for more details</dd>
 
   <dt class="col-3">src/CMakeLists.txt</dt>
   <dd class="col-9">Describe the source files required to build your controller</dd>
@@ -43,7 +43,7 @@ $ mc_rtc_new_controller my_first_controller MyFirstController
   <dd class="col-9">Declaration to make sure your controller will be loadable on all platforms</dd>
 
   <dt class="col-3">src/MyFirstController.h</dt>
-  <dd class="col-9">Declare your controller class. It must inherits from <code>mc_control::Controller</code> and override at least the run function and the reset function</dd>
+  <dd class="col-9">Declare your controller class. It must inherits from {% doxygen mc_control::Controller %} and override at least the run function and the reset function</dd>
 
   <dt class="col-3">src/MyFirstController.cpp</dt>
   <dd class="col-9">Implement your controller. We will go over this in more details in the next sections</dd>
