[doc] Proofread tutorial

--- a/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
+++ b/doc/_includes/tutorials/introduction/first-controller/create-cpp.html
@@ -27,7 +27,7 @@ optional arguments:
 $ mc_rtc_new_controller my_first_controller MyFirstController
 {% endhighlight %}
 
-<p>Going into the newly create my_first_controller folder we can see some files have been created:</p>
+<p>Going into the newly created <code>my_first_controller</code> folder we can see some files have been automatically generated:</p>
 
 <dl class="row">
   <dt class="col-3">CMakeLists.txt</dt>
