[doc] Pretty print errors in JSON schemas

--- a/doc/css/mc_rtc.css
+++ b/doc/css/mc_rtc.css
@@ -135,6 +135,11 @@ body
   margin-bottom: 10px;
 }
 
+.card .card-schema table
+{
+  table-layout:fixed;
+}
+
 .object-property
 {
   margin-bottom: 10px;
